<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="edu.rose_hulman.goldacbj.pager.LoginActivity"
    tools:showIn="@layout/activity_start">


    <TextView
        android:id="@+id/welcomeTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="56dp"
        android:text="@string/welcomeToPager"
        android:textColor="@android:color/white"
        android:textSize="35sp" />

    <TableRow
        android:id="@+id/viewStub1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/welcomeTextView2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/email_login_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittexttheme_edit_text_holo_light"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
            android:textSize="25sp" />
    </TableRow>


    <TableRow
        android:id="@+id/viewStub2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewStub1"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:background="@android:color/white">

        <EditText
            android:id="@+id/password_login_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittexttheme_edit_text_holo_light"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textSize="25sp" />
    </TableRow>

    <Button
        android:id="@+id/loginButtonLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/viewStub2"
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/action_sign_in_short"
        android:textSize="25sp" />


</RelativeLayout>
