<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/registerTextTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/register"
        android:textColor="@color/colorOutLineGold"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/registerTextTitle">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <EditText
                android:id="@+id/firstNameRegister"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/edittexttheme_edit_text_holo_light"
                android:hint="@string/firstName"
                android:textColor="@android:color/holo_purple"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/lastNameRegister"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/firstNameRegister"
                android:background="@drawable/edittexttheme_edit_text_holo_light"
                android:hint="@string/lastName"
                android:textColor="@android:color/holo_purple"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/firstNameRegister"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittexttheme_edit_text_holo_light"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:textColor="@android:color/holo_purple"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwrodRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/emailRegister"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittexttheme_edit_text_holo_light"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:textColor="@android:color/holo_purple"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/passwrodRepeatRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/passwrodRegister"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittexttheme_edit_text_holo_light"
                android:hint="@string/repeatPassword"
                android:inputType="textPassword"
                android:textColor="@android:color/holo_purple"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/mobileNumberRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/passwrodRepeatRegister"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edittexttheme_edit_text_holo_light"
                android:hint="@string/phoneNumber"
                android:inputType="phone"
                android:textColor="@android:color/holo_purple"
                android:textColorHint="@android:color/white"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/mobileNumberRegister"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:background="@color/colorPurplePrimary"
                android:padding="10dp"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>